<resources>
    <string name="app_name">두빛나래</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_activity_example_swipe_menu" translatable="false">ExampleSwipeMenu</string>
    <string name="title_activity_admin" translatable="false">AdminActivity</string>
    <string name="store_tab_text_1">매장 정보</string>
    <string name="store_tab_text_2">한복</string>
    <string name="title_activity_store" translatable="false">Store</string>

    <string name="tab_text_1">매장관리</string>
    <string name="tab_text_2">옷관리</string>
    <string name="tab_text_3">주문</string>
    <string name="tab_text_3.1">미승인 목록</string>
    <string name="tab_text_3.2">승인 목록</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="reserve_text">대여하기</string>
    <string name="str_done">완료</string>
    <string name="tmp">한복입고 돌아다니기 좋은 날씨네요</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="license" translatable="false">Icons made by Robin Kylander from www.flaticon.com is licensed by CC 3.0 BY
        \nIcons made by Smashicons from www.flaticon.com is licensed by CC 3.0 BY\nIcon made by Graphicsbay from https://icon-icons.com
        is licensed by CC Attribution 3.0 Unported\nIcon made by VisualPharm from https://icon-icons.com is licensed by Linkware\n
        Icon made by The Eyecons from https://icon-icons.com is licensed by CC Attribution 3.0 Unported\n
        Icon made by Cole Bemis from https://icon-icons.com is licensed by Creative Commons (Attribution 3.0 Unported)</string>

    <string name="companyInfo" translatable="false">두빛나래는 통신판매중개자이며 통신판매의 당사자가 아닙니다.
        \n따라서 두빛나래는 한복 예약, 대여, 취소 등과 관련한 의무와 책임이 없으며,
        \n거래에 따른 법적 책임은 각 판매자에게 있습니다.
    </string>
    <string name="default_notification_channel_name" translatable="false">oreoChanel</string>
    <string name="default_notification_channel_id" translatable="false">notification_id</string>
    <string name="papago_ID" translatable="false">zgvN61GVH8aqvH8kEtH0</string>

    <!--main_activity-->
    <string name="store_location_text">대여점 위치를 선택해 주세요</string>
    <string name="store_location1" translatable="false">서촌</string>
    <string name="store_location2" translatable="false">북촌</string>
    <string name="hanbok_recommand">오늘의 추천 한복</string>
    <string name="gogung_search">고궁 알아보기</string>
    <string name="weather_location">서울특별시 종로구</string>
    <string name="copyright">저작권</string>
    <string name="logout">로그아웃</string>

    <!--register_activity-->
    <string name="register_id">아이디(영문,숫자조합)</string>
    <string name="register_pw">비밀번호(8~20자리)</string>
    <string name="register_pw_confirm">비밀번호 확인</string>
    <string name="register_name">이름</string>
    <string name="register_phone">전화번호(010-0000-0000)</string>
    <string name="register_admin">매장관리자</string>

    <!--mypage_activity-->
    <string name="mypage">내 정보</string>
    <string name="reservation_list">대여 기록</string>

    <!--mypage_fragment-->
    <string name="mypage_info">내 정보</string>
    <string name="mypage_id">아이디</string>
    <string name="mypage_pw">비밀번호</string>
    <string name="mypage_name">이름</string>
    <string name="mypage_phone">전화번호</string>
    <string name="mypage_change">수 정</string>

    <!--reservation_info_activity-->
    <string name="total_text">총 </string>
    <string name="piece_text"> 벌 대여비</string>

    <!--reservation_clothes_actiity-->
    <string name="basket_text">장바구니</string>
    <string name="soldout_text">재고 없음</string>
    <string name="total_fee">총 예상 대여비</string>
    <string name="cnt_text">수량</string>
    <string name="fee_text">대여비</string>

    <!--tool_bar_store-->
    <string name="man_text">남성</string>
    <string name="woman_text">여성</string>

    <!--store_info_fragment-->
    <string name="store_name_text">가게 이름</string>
    <string name="store_intro_text">가게 소개</string>
    <string name="store_info_text">가게 정보</string>
    <string name="store_phone_text">전화번호</string>
    <string name="store_admin_text">사업자 정보</string>
    <string name="store_locationinfo_text">위치 정보</string>

    <!--component_basket_cardview-->
    <string name="piece1_text"> 벌</string>

    <string name="hanbok_rule">한복 입는 법</string>
    <string name="hanbok_guideline">한복\n가이드라인</string>
</resources>
