<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="@drawable/backgoround_street"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/register_form"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/jejuhallasan"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="날개가 되어줄 한복의 이야기"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/register_id"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.65"
                android:background="#fff"
                android:gravity="center_vertical"
                android:singleLine = "true"
                android:lines = "1"
                android:inputType="text"
                android:hint="@string/register_id"
                android:paddingLeft="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/register_password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.65"
                android:background="#fff"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:singleLine = "true"
                android:lines = "1"
                android:hint="@string/register_pw"
                android:paddingLeft="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/register_password_confirm"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.65"
                android:background="#fff"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:singleLine = "true"
                android:lines = "1"
                android:hint="@string/register_pw_confirm"
                android:paddingLeft="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/register_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.65"
                android:background="#fff"
                android:gravity="center_vertical"
                android:singleLine = "true"
                android:lines = "1"
                android:inputType="text"
                android:hint="@string/register_name"
                android:paddingLeft="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/register_phone"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.65"
                android:background="#fff"
                android:gravity="center_vertical"
                android:singleLine = "true"
                android:lines = "1"
                android:hint="@string/register_phone"
                android:inputType="text"
                android:paddingLeft="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:weightSum="1">

            <CheckBox
                android:id="@+id/register_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:buttonTint="#ffffff"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/register_admin"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorLink="@android:color/background_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:weightSum="1">


            <LinearLayout
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.65"
                android:background="@color/appMainColor"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>