<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/backgoround_street"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login_form"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="#fff"
            android:textSize="50dp"
            android:fontFamily="@font/jejuhallasan"
            android:text="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="날개가 되어줄 한복의 이야기"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginBottom="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/login_id"
                android:layout_weight="0.65"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:paddingLeft="15dp"
                android:singleLine = "true"
                android:lines = "1"
                android:gravity="center_vertical"
                android:background="#fff"
                android:hint="ID" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/login_password"
                android:layout_weight="0.65"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:paddingLeft="15dp"
                android:singleLine = "true"
                android:lines = "1"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:background="#fff"
                android:hint="Password" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/login_form"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center"
            android:layout_marginBottom="40dp">
            <LinearLayout
                android:id="@+id/login_btn"
                android:layout_weight="0.65"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@color/appMainColor"
                android:gravity="center">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:text="@string/login" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_signup"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:text="@string/signup" />
        </LinearLayout>

        <CheckBox
            android:visibility="invisible"
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="10dp"
            android:text="Remember login" />
    </LinearLayout>
</RelativeLayout>